# sc-dpi

./: CMakeLists.txt  readme.org
lib/: serial_console.cpp  serial_console.hpp
src/: SimUART.cpp  SimUART.sv  main.cpp  main.sv  serial_console.cpp  serial_console.hpp
test/: echo_test.cpp
